--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,6 @@ jobs:
           SSH_KEY: ${{ secrets.SSH_KEY }}
 
       - name: Restart server
-        run: ssh root@134.209.232.1 -i ~/.ssh/do_ssh_key.key 'docker stop website && docker pull ${{ secrets.DOCKER_USERNAME }}/website:latest && docker run -d --name website -p 80:3000 ${{ secrets.DOCKER_USERNAME }}/website:latest'
+        run: ssh root@134.209.232.1 -i ~/.ssh/do_ssh_key.key 'docker rm -f website &>/dev/null && docker pull ${{ secrets.DOCKER_USERNAME }}/website:latest && docker run -d --name website -p 80:3000 ${{ secrets.DOCKER_USERNAME }}/website:latest'
         env:
           SSH_HOST: ${{ secrets.SSH_HOST }}
